# fastapi_stresstest

./: pyproject.toml
alembic/: env.py
alembic/versions/: ccbf7d746aae_added_json_dump_table.py
app/: envs.py  lifespan.py  main.py
app/db/: connection.py
app/db/models/: __init__.py  json_dump.py
app/db/repositories/: json_dump_repository.py
app/models/: JSONDumpDTO.py
docker/: Dockerfile  docker-compose.yml
locust/: performance.py  performance_test.py
test/: __init__.py
test/integration/: conftest.py  test_connection.py  test_migrations.py
test/integration/fixtures/: __init__.py  alembic.py  connection.py
