[tool.poetry]
name = "fastapi-stresstest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_stresstest"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
sqlalchemy = "^2.0.19"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
