[tool.poetry]
name = "fastapi-stresstest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["postgres"], version = "^0.101.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^21.2.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
wait-for-it = "^2.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
faker = "^19.2.0"
testcontainers = {extras = ["postgres"], version = "^3.7.1"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
locust = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"